# heuristic-search

./: CHANGES.rst  README.md  README.rst  forward-search.cabal  heuristic-search.cabal  stack.yaml
astar-opt/: Main.hs
bench/: Bench.hs
src/Data/: Inf.hs
src/Data/Search/: Adversarial.hs  Forward.hs  Local.hs
src/Data/Search/Forward/: AStar.hs  Beam.hs  NonOptimal.hs  RBFS.hs
