name:                forward-search
version:             0.1.0.0
synopsis:            Informed Forward Search Algorithms
description:         See README.rst
homepage:            https://github.com/githubuser/forward-search#readme
license:             LGPL-3
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2017 Paul Ogris
category:            Web
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Search.Forward.AStar
  build-depends:       base >= 4.7 && < 5,
                       unordered-containers,
                       psqueues,
                       hashable
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tsahyt/forward-search
