name:                heuristic-search
version:             0.1.0.0
synopsis:            Informed Search Algorithms
description:         See README.rst
homepage:            https://github.com/tsahyt/heuristic-search#readme
license:             LGPL-3
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2017 Paul Ogris
category:            Web
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Search.Forward
                       Data.Search.Forward.AStar
                       Data.Search.Forward.RBFS
                       Data.Search.Forward.NonOptimal
                       Data.Search.Forward.Beam
                       Data.Search.Local
                       Data.Search.Adversarial
  other-modules:       Data.Inf
  ghc-options:         -Wall -O2 -threaded
  build-depends:       base >= 4.7 && < 5,
                       unordered-containers >= 0.2.8.0 && < 0.3,
                       deque >= 0.2 && < 0.3,
                       psqueues >= 0.2.2.0 && < 0.3,
                       hashable >=1.2.1 && <1.3,
                       mtl >= 2.2.1 && < 3,
                       MonadRandom >= 0.5.1 && < 0.6,
                       random >= 1.1 && < 1.2,
                       parallel >= 3.2 && < 3.3
  default-language:    Haskell2010

benchmark bench
  hs-source-dirs:      bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5, heuristic-search, criterion
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tsahyt/heuristic-search
